üpdate css loader index and base

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -22,6 +22,10 @@
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
+  body, html {
+    overflow-x: hidden !important;
+  }
+  
   h1, h3 {
     color: red;
     font-size: 40px;
@@ -56,9 +60,9 @@
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
   body, html {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
-  
+
   #section1 {
     padding-top: 25%;
   }
@@ -92,7 +96,7 @@
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
   body, html {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 
   .nav-item {
@@ -178,7 +182,7 @@
 /* smallar to larger mobile phones screens */
 @media only screen and (max-width:480px) {
   body, html {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 
   .logo {
