--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,10 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
   overflow-x: hidden !important;
+  overflow-y: scroll;
   font-family: 'Work Sans', 'Arial', sans-serif;
-  font-weight: 300; }
-
-.row {
-  margin: 0 auto; }
+  font-weight: 300;
+  position: relative; }
 
 /* Preloader */
 #preloader {
@@ -83,7 +82,7 @@ html {
   z-index: 9;
   padding: 5px;
   height: 80px;
-  transition: 0.5s; }
+  transition: .5s; }
 
 .sticky-nav .logo {
   height: 60px;
