--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -460,50 +460,17 @@ h3 {
 
 /* Contact Us */
 .contact {
-  position: relative;
-  height: 75vh;
-  min-height: 25rem;
-  width: 100%;
-  overflow: hidden;
-
-  header {
-    position: relative;
-    background-color: $black;
-    height: 75vh;
-    min-height: 25rem;
-    width: 100%;
-    overflow: hidden;
-
-    video {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      min-width: 100%;
-      min-height: 100%;
-      width: auto;
-      height: auto;
-      z-index: 0;
-      -ms-transform: translateX(-50%) translateY(-50%);
-      -webkit-transform: translateX(-50%) translateY(-50%);
-      transform: translateX(-50%) translateY(-50%);
-    }
-
-    .container {
-      position: relative;
-      z-index: 2;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-color: $black;
-      opacity: 0.5;
-      z-index: 1;
-    }
-  }
+  background-image: -webkit-linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.8)
+    ),
+    url(../images/contact-with-raiyan.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
+    url(../images/contact-with-raiyan.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 10%;
+  text-align: center;
 
   .container {
     position: relative;
